--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,34 +5,34 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Werror -O2")
 
 add_executable(image_processor
-    application.cpp
-    cmd_arg_parser.cpp
-    exceptions.cpp
-    image.cpp
-    filter_crop.cpp
-    filter_edge_detection.cpp
-    filter_gaussian_blur.cpp
-    filter_grayscale.cpp
-    filter_negative.cpp
-    filter_sharpening.cpp
-    filter_hexagonal_pixellate.cpp
-    filter_crystallize.cpp
-    filter_vignetting.cpp
-    filter_bulge.cpp
-    filter_grid.cpp
-    filter_pipeline.cpp
-    filter_pipeline_factory.cpp
-    image_processor.cpp
+    src/application.cpp
+    src/cmd_arg_parser.cpp
+    src/exceptions.cpp
+    src/image.cpp
+    src/filter_crop.cpp
+    src/filter_edge_detection.cpp
+    src/filter_gaussian_blur.cpp
+    src/filter_grayscale.cpp
+    src/filter_negative.cpp
+    src/filter_sharpening.cpp
+    src/filter_hexagonal_pixellate.cpp
+    src/filter_crystallize.cpp
+    src/filter_vignetting.cpp
+    src/filter_bulge.cpp
+    src/filter_grid.cpp
+    src/filter_pipeline.cpp
+    src/filter_pipeline_factory.cpp
+    src/image_processor.cpp
 )
 
 add_executable(test_image_processor
-    cmd_arg_parser.cpp
-    exceptions.cpp
-    image.cpp
-    filter_crop.cpp
-    filter_edge_detection.cpp
-    filter_gaussian_blur.cpp
-    filter_grayscale.cpp
-    filter_negative.cpp
-    unity_tests.cpp
+    src/cmd_arg_parser.cpp
+    src/exceptions.cpp
+    src/image.cpp
+    src/filter_crop.cpp
+    src/filter_edge_detection.cpp
+    src/filter_gaussian_blur.cpp
+    src/filter_grayscale.cpp
+    src/filter_negative.cpp
+    src/unity_tests.cpp
 )
